# mjas-v3

./: .gitignore  AGENTIC_UPGRADE.md  README.md  pyproject.toml
CLaude /: AGENT_2_APPLICATION.md  AGENT_4_PROFILE.md  AGENT_5_TRACKER.md  ANTIGRAVITY_SETUP.md  QUICK_REFERENCE.md
New Docs/: 00_ANTIGRAVITY_MASTER.md  01_PORTAL_BY_PORTAL_BROWSER.md  02_EXACT_AGENT_PROMPTS.md  03_TRICKS_AND_TIPS.md  04_QUICK_START_NOW.md
config/: CANDIDATE_MASTER_PROFILE.md  credentials.env.example
data/: resume.txt
data/templates/: cl_template.txt  resume_template.txt
docs/: executor_agent.md  market_agent.md  matching_agent.md  optimizer_agent.md  system_architecture.md  tracking_agent.md
docs/claude_docs/: AGENT_1_RESEARCH.md  AGENT_3_LINKEDIN.md  MASTER_AGENT_SYSTEM.md
scripts/: credential_wizard.py  install.sh  setup_credentials.py
src/: main.py
src/agents/: application_agent.py  executor_agent.py  linkedin_agent.py  market_agent.py  matching_agent.py  optimizer_agent.py  profile_agent.py  research_agent.py  tracker_agent.py  tracking_agent.py
src/mjas/: __init__.py  __main__.py
src/mjas/agents/: __init__.py
src/mjas/core/: __init__.py  database.py  session_manager.py  swarm.py  vault.py  worker.py
src/mjas/discovery/: __init__.py
src/mjas/portals/: __init__.py  base.py  careerbuilder.py  dice.py  glassdoor.py  hired.py  indeed.py  linkedin.py  naukri.py  otta.py  registry.py  remoteok.py  simplyhired.py  wellfound.py  weworkremotely.py  ziprecruiter.py
src/mjas/utils/: __init__.py
src/utils/: feedback_loop.py
tests/: __init__.py
tests/integration/: __init__.py  test_full_flow.py
tests/unit/: __init__.py  test_session_manager.py  test_vault.py
